--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,14 +3,13 @@
 
 
 
-<!--start of actual A frame code-->
 
 
 
 <html>
 
 
-
+<!--start of actual A frame code-->
 
 <head>
 
@@ -32,7 +31,7 @@
 <a-scene>
 
 
-    <a-camera position="0 2 0" user-height="0">
+<a-camera position="0 2 0" user-height="0">
 
 </a-camera>
 
@@ -60,7 +59,7 @@
 <!--floating objects-->
 <!--units are in meters: x y z, +z towards line of vision, +x right horizontal, +y up vertical-->
 <!--centre meter square at 0 2 0 cannot be occupied by objects cos the "person's eye level" is there-->
-<!--duration counted in ms, rotation in degrees-->
+<!--duration counted in ms, small no. faster, rotation in degrees, +ve clockwise viewed from +ve axis direction-->
 
 
 <a-box position="0 3 -15" color="red" height="2" width="1" depth="1">
