--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -61,8 +61,13 @@
 <!--centre meter square at 0 2 0 cannot be occupied by objects cos the "person's eye level" is there-->
 <!--duration counted in ms, small no. faster, rotation in degrees, +ve clockwise viewed from +ve axis direction-->
 
+<a-box position="0 2 0" color="black" height="1" width="1" depth="1">
 
-<a-box position="0 3 -15" color="red" height="2" width="1" depth="1">
+<a-animation attribute="rotation" to="0 0 360" repeat="indefinite" easing="linear" dur="8000">
+
+</a-animation>
+
+<a-box position="0 5 -15" color="red" height="2" width="1" depth="1">
 
     <a-animation attribute="rotation" to="0 0 360" repeat="indefinite" easing="linear" dur="8000">
 
@@ -97,10 +102,10 @@
 
 </a-box>
 
+</a-box>
 
 </a-scene>
 
 </body>
 
 </html>
-
